--- a/templates/index.html
+++ b/templates/index.html
@@ -65,11 +65,6 @@
                 bottom:1px;
                 top:auto;
             }
-            .glow {
-                outline: none;
-                border-color: yellow;
-                box-shadow: 0 0 20px yellow;
-            }
             #forkongithub {
                 position:fixed;
                 display:block;
@@ -160,8 +155,8 @@ function secondsToHms(d) {
     var m = Math.floor(d % 3600 / 60);
     var s = Math.floor(d % 3600 % 60);
 
-    var hDisplay = h > 0 ? h + (h === 1 ? " hr, " : " hrs, ") : "";
-    var mDisplay = m > 0 ? m + (m === 1 ? " min, " : " mins, ") : "";
+    var hDisplay = h > 0 ? h + (h === 1 ? " hr " : " hrs ") : "";
+    var mDisplay = m > 0 ? m + (m === 1 ? " min " : " mins ") : "";
     var sDisplay = s > 0 ? s + (s === 1 ? " sec" : " secs") : "";
     return hDisplay + mDisplay + sDisplay;
 }
