--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="{{ url_for('static', filename='bootstrap.5.1.3.min.css') }}" rel="stylesheet" >
         <style>
-
+            .time {
+                font-style: italic;
+            }
+            .notify {
+                display: none;
+                color: blue;
+                margin-left: 4px;
+            }
 
             /* ==========================================================================
                Fork Me on Github Stuffs
@@ -26,8 +33,8 @@
                 line-height: 1rem;
                 width:200px;
                 position:absolute;
-right: 17px;
-top: 77px;
+                right: 17px;
+                top: 77px;
                 transform:rotate(45deg);
                 -webkit-transform:rotate(45deg);
                 -ms-transform:rotate(45deg);
@@ -62,6 +69,22 @@ top: 77px;
                 right: -55px;
                 top: -30px;
             }
+            @media only screen and (max-width: 600px) {
+                #forkongithub {
+                    width: 173px;
+                    height: 150px;
+                }
+                #forkongithub a {
+                    font-size: 0.6rem;
+                    line-height: .3rem;
+                    right: -13px;
+                    top: 57px;
+                }
+                .btn-group {
+                    width: 100%;
+                    padding: 5px 0 0 0;
+                }
+            }
 
         </style>
     <title>Timekpr Next Remote</title>
@@ -86,48 +109,56 @@ top: 77px;
     <script src="{{ url_for('static', filename='jquery-3.6.3.min.js') }}"></script>
     <script>
     $.getJSON( "/config", function( data ) {
-        let last_computer = ''
         const items = [];
+        const second_options = [300, 900, 1800, 2700, 3600];
         $.each( data, function( computer, user ) {
-            seconds_used = 3932;
-            if (last_computer !== computer){
-                items.push("<h2  class='display-4'>" + computer + "</h2>");
-                last_computer = computer;
-            }
-            const seconds_left = get_usage(user, computer);
+            let usage = $.parseJSON(get_usage(user, computer));
             items.push(
                 "<span class='user' id='"+ user + "'>" +
-                    "<span  class='h3'>" + user  + " " +
-                      "<span id='usage'>" + secondsToHms(seconds_left) + " remain</span><br/>" +
-                      "<span id='used'>" + secondsToHms(seconds_used) + " total used today</span><br/>" +
-                    "</span>" +
+                    "<p  class='h3'>" + user  + "<span class='notify'>Updated!</span><p>" +
+                    "<span>Unused: <span class='time' id='time_left'>" + secondsToHms(usage.time_left) + "</span> </span>" +
+                    "<span>Used: <span class='time'  id='time_spent'>" + secondsToHms(usage.time_spent) + "</span></span><br/>" +
                     "<div class='btn-group' role='group' aria-label='Action'>" +
-                      "<input type='radio'  class='btn-check' id='add' value='add' name='action'><label  class='btn btn-outline-primary' for='add'>Add</label>" +
-                      "<input type='radio'  class='btn-check' id='remove' value='remove' name='action'><label  class='btn btn-outline-primary' for='remove'>Remove</label> " +
+                        "<input type='radio'  class='btn-check' id='add' value='add' name='action' />" +
+                        "<label  class='btn btn-outline-primary' for='add'>Add</label>" +
+                        "<input type='radio'  class='btn-check' id='remove' value='remove' name='action' />" +
+                        "<label  class='btn btn-outline-primary' for='remove'>Remove</label> " +
                     "</div> " +
-                    "<div class='btn-group' role='group' aria-label='Times'>" +
-                      "<button class='btn btn-primary' value='300' user='"+ user + "' computer='" + computer + "'>5 min</button> " +
-                      "<button class='btn btn-primary' value='900' user='"+ user + "' computer='" + computer + "'>15 min</button> " +
-                      "<button class='btn btn-primary' value='1800' user='"+ user + "' computer='" + computer + "'>30 min</button> " +
-                      "<button class='btn btn-primary' value='2700' user='"+ user + "' computer='" + computer + "'>45 min</button> " +
-                      "<button class='btn btn-primary' value='3600'  user='"+ user + "' computer='" + computer + "'>1 hr</button> " +
+                    "<div class='btn-group' role='group' aria-label='Times'>"
+                );
+            $.each(second_options, function(index, seconds) {
+                items.push(
+                    "<input type='radio'  class='btn-check'  value='" + seconds + "' id='the" + seconds + "' name='seconds' />" +
+                    "<label  class='btn btn-outline-primary' for='the" + seconds + "'>" + secondsToHms(seconds) + "</label>");
+            });
+            items.push(
                     "</div>" +
+                    "<div class='btn-group' role='group' aria-label='save'>" +
+                        "<button class='btn btn-outline-primary' " +
+                            "id='save_me' value='save' user='" + user + "' computer='" + computer + "' >Save</button>" +
+                    "</div> " +
                 "</span>"
-            );
+                );
             get_usage();
         });
 
         $("#people").html(items.join( "" ));
 
-        $("button" ).click(function() {
+        $("#save_me" ).click(function() {
             const user = $( this ).attr('user');
             const computer = $( this ).attr('computer');
             const action = $( '#' + user + ' input[name="action"]:checked').val();
-            const seconds = $( this ).val();
-            if(action !== undefined){
+            const seconds = $( '#' + user + ' input[name="seconds"]:checked').val();
+            if(action !== undefined && seconds !== undefined){
+                $('input').prop('checked', false);
                 add_or_remove_time(user, computer, action, seconds);
+                $( '#' + user + ' .notify').fadeIn(function() {
+                    setTimeout(function() {
+                        $('#' + user + ' .notify').fadeOut("slow");
+                    }, 1000);
+                });
             } else {
-                alert("Choose 'Add' or 'Remove'");
+                alert("Choose 'Add' or 'Remove' and choose an amount of time to add.");
             }
         });
     });
@@ -139,8 +170,10 @@ top: 77px;
         } else {
             form = 'decrease_time'
         }
+        console.log("add_or_remove_time callded: form", form,"computer", computer,"user",user,"seconds",seconds);
         $.getJSON("/" + form + "/" + computer + "/" + user + "/" + seconds, function( data ) {
-            $('#' + user + " #usage").html(secondsToHms(data.usage));
+            $('#' + user + " #time_left").html(secondsToHms(data.time_left));
+            $('#' + user + " #time_spent").html(secondsToHms(data.time_spent));
         });
     }
 
